--- a/App.config
+++ b/App.config
@@ -1,6 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
-    </startup>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
+	</startup>
+	<appSettings>
+		<add key = "howmanyfileext" value ="4"/>
+		<add key ="howmanyfileexe" value ="4"/>
+		<add key ="cmd_file_ext" value ="*.cmd" />
+		<add key ="bat_file_ext" value ="*.bat" />
+		<add key ="ps1_file_ext" value ="*.ps1" />
+		<add key ="ps2_file_ext" value ="*.ps2" />
+		<add key ="ps_file_ext" value ="*.ps2" />
+		<add key ="cmd_file_exe" value = "c:\\windows\\system32\\cmd.exe" />
+		<add key ="bat_file_exe" value ="c:\\windows\\system32\\cmd.exe" />
+		<add key ="ps1_file_exe" value ="C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\powershell.exe" />
+		<add key ="ps2_file_exe" value ="C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\powershell.exe" />
+		<add key ="ps_file_exe" value ="C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\powershell.exe" />
+
+	</appSettings>
 </configuration>
