v.2.0.2.0 added edit button

--- a/App.config
+++ b/App.config
@@ -11,6 +11,7 @@
 		<add key ="ps1_file_ext" value ="*.ps1" />
 		<add key ="ps2_file_ext" value ="*.ps2" />
 		<add key ="ps_file_ext" value ="*.ps2" />
+		<add key="editorname" value="notepad.exe"/>
 		<add key ="cmd_file_exe" value = "c:\\windows\\system32\\cmd.exe" />
 		<add key ="bat_file_exe" value ="c:\\windows\\system32\\cmd.exe" />
 		<add key ="ps1_file_exe" value ="C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\powershell.exe" />
